# apflow

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: README.md  index.md  prd.md  tech-design.md
docs/apflow-v2/: prd.md  tech-design.md
docs/api/: http.md
docs/architecture/: exception-handling.md  extension-registry-design.md  task-orchestration.md
docs/cli/: api-gateway.md  commands.md  configuration.md  index.md
docs/development/: contributing.md  setup.md
docs/examples/: generate-executor.md  task-tree.md
docs/features/: apcore-bridge.md  durable-execution.md  project-slimming.md
docs/getting-started/: concepts.md  examples.md  installation.md  quick-start.md
docs/guides/: cli.md  environment-variables.md  faq.md  task-orchestration.md
docs/protocol/: 01-overview.md  02-core-concepts.md  05-examples.md  06-interfaces.md  07-conformance.md  08-errors.md  index.md
docs/scripts/: generate_executor_docs.py
examples/: README.md
src/apflow/: __init__.py  app.py  cli.py
src/apflow/api/docs/: openapi.py
src/apflow/bridge/: module_adapter.py  registry_setup.py  scanner_bridge.py  task_modules.py
src/apflow/cli/: cli_config.py  jwt_token.py
src/apflow/cli/commands/: config.py  daemon.py  scheduler.py
src/apflow/core/: config_manager.py
src/apflow/core/execution/: executor_registry.py  task_manager.py
src/apflow/core/extensions/: base.py  decorators.py  manager.py  registry.py  scanner.py  types.py
src/apflow/core/interfaces/: executable_task.py
src/apflow/core/storage/: __init__.py  factory.py
src/apflow/core/storage/migrations/: 004_add_durability_and_governance.py
src/apflow/core/storage/sqlalchemy/: models.py  task_repository.py
src/apflow/core/tools/: __init__.py
src/apflow/core/utils/: __init__.py  llm_key_context.py  llm_key_injector.py
src/apflow/durability/: checkpoint.py  circuit_breaker.py
src/apflow/extensions/http/: rest_executor.py
src/apflow/extensions/storage/: sqlite_storage.py
src/apflow/extensions/websocket/: websocket_executor.py
src/apflow/governance/: budget.py
tests/: conftest.py  test_app.py  test_v2_slimming.py
tests/bridge/: test_module_adapter.py  test_registry_setup.py  test_task_modules.py
tests/core/: test_extension_scanner.py  test_task_tree_hooks.py
tests/core/execution/: test_task_concurrency.py  test_task_executor_additional.py  test_task_executor_concurrent.py
tests/core/storage/: test_database_path_priority.py
tests/core/storage/sqlalchemy/: test_scheduling.py
tests/durability/: test_checkpoint.py
tests/extensions/core/: test_aggregate_results_executor.py
tests/extensions/generate/: test_crewai_dependency_fix.py  test_crewai_schema_mapping.py  test_generate_crewai.py  test_generate_real_scenario.py  test_llm_scrape_executor.py  test_multi_phase_crew.py
tests/extensions/tools/: test_limited_scrape_tools.py
tests/scheduler/: test_scheduler.py
