[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "apflow"
version = "0.20.0"
description = "AI Agent Production Middleware"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "aiperceivable", email = "team@aiperceivable.com"}
]
license = {text = "Apache-2.0"}
keywords = ["ai", "agent", "middleware", "production", "durable-execution", "cost-governance", "apcore"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Core dependencies
dependencies = [
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.0.0",
    # Default storage (SQLite via Python stdlib, no extra dep)
    "sqlalchemy>=2.0.0",
    "sqlalchemy-session-proxy>=0.1.0",
    "alembic>=1.13.0",
    # apcore ecosystem (MCP + A2A + CLI standard)
    "apcore>=0.14.0",
    "apcore-mcp>=0.11.0",
    "apcore-a2a>=0.3.0",
    "apcore-cli>=0.3.0",
]

# Optional dependencies
[project.optional-dependencies]
# Documentation (MkDocs with Material theme)
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocs-mermaid2-plugin>=1.0.0",
    "mkdocs-minify-plugin>=0.7.0",
    "pymdown-extensions>=10.0.0",
]

# PostgreSQL storage (distributed/production)
postgres = [
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "greenlet>=3.0.0",
]

# Task scheduling (cron-like scheduling)
scheduling = ["croniter>=1.0.0"]

# Tool executors (optional)
email = ["aiosmtplib>=3.0.0"]
ssh = ["asyncssh>=2.14.0"]
docker = ["docker>=7.0.0"]

# All optional features
all = [
    "apflow[postgres,scheduling,email,ssh,docker]",
]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-timeout>=2.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "build>=1.0.0",
    "twine>=4.0.0",
    "pre-commit>=3.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"apflow" = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.apdev]
base_package = "apflow"
src_dir = "src"

[project.urls]
Homepage = "https://aiperceivable.com"
Source = "https://github.com/aiperceivable/apflow"
